<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

  <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" 
        >

      <TextView
          android:id="@+id/textView1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/date"
          android:textAppearance="?android:attr/textAppearanceMedium" />

      <EditText
          android:id="@+id/editTextDate"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10" />

      <TextView
          android:id="@+id/textView2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/squat"
          android:textAppearance="?android:attr/textAppearanceMedium" />

      <EditText
          android:id="@+id/editTextSquat"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10" >

          <requestFocus />
      </EditText>

      <TextView
          android:id="@+id/textView3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/bench"
          android:textAppearance="?android:attr/textAppearanceMedium" />

      <EditText
          android:id="@+id/editTextBench"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10" />

      <TextView
          android:id="@+id/textView4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/deadlift"
          android:textAppearance="?android:attr/textAppearanceMedium" />

      <EditText
          android:id="@+id/editTextDeadlift"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10" />

      <TextView
          android:id="@+id/textView5"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/press"
          android:textAppearance="?android:attr/textAppearanceMedium" />

      <EditText
          android:id="@+id/editTextPress"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10" />

      <TextView
          android:id="@+id/textView6"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/clean"
          android:textAppearance="?android:attr/textAppearanceMedium" />

      <EditText
          android:id="@+id/editTextClean"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10" />

      <TextView
          android:id="@+id/textView7"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/extensions"
          android:textAppearance="?android:attr/textAppearanceMedium" />

      <EditText
          android:id="@+id/editTextExtensions"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10" />

      <TextView
          android:id="@+id/textView8"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/pullchinups"
          android:textAppearance="?android:attr/textAppearanceMedium" />

      <EditText
          android:id="@+id/editTextPullchinups"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10" />

      <Button
          android:id="@+id/button1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:onClick="run"
          android:text="@string/save" />
        
  </LinearLayout>
  </ScrollView>