<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:background="#99CC00">

    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" 
        >

        <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/phase2"
        android:layout_marginTop="23dp"
        android:textSize="30sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Workout A"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView4"
        android:text="@string/_3x5_squat"
        android:onClick="squatVid"
        android:width="@dimen/Width" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@string/_id_button2"
        android:text="3x5 Press"
        android:onClick="pressVid"
        android:width="@dimen/Width" />
    
    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="1x5 Deadlift"
        android:onClick="deadliftVid"
        android:width="@dimen/Width" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Workout B"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_3x5_squat"
        android:onClick="squatVid"
        android:width="@dimen/Width" />

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="3x5 Bench Press"
        android:onClick="benchVid"
        android:width="@dimen/Width" />

    <Button
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@string/_id_button6"
        android:text="5x3 Power Clean"
        android:onClick="cleanVid"
        android:width="@dimen/Width" 
        android:layout_marginBottom="23dp"/>
    </LinearLayout>

</ScrollView>